# alfred-writer

./: .gitignore  Cargo.toml  README.md  build.rs
docker/: README.md  docker-compose.yml
docker/alloy/: config.alloy
docker/grafana/dashboards/: alfred-writer.json
docker/grafana/provisioning/dashboards/: alfred-writer.yaml
docker/grafana/provisioning/datasources/: loki.yaml
scripts/: generate-icon.ps1
src/: app.rs  automation.rs  claude.rs  config.rs  input.rs  lib.rs  main.rs  targets.rs  theme.rs  tray.rs
src/automation/: cache.rs  field.rs  geometry.rs  replace.rs
src/providers/: external_command.rs  local.rs  mod.rs
src/telemetry/: mod.rs
test-samples/: 01-short-casual.txt  02-medium-email.txt  03-long-essay.txt  04-technical-software.txt  05-technical-scientific.txt  06-tiny-edge-case.txt  README.md
tests/: claude_cli_integration.rs  config_integration.rs  external_command_cli_integration.rs  targets_integration.rs
