[package]
name = "alfred-writer"
version = "2.0.0"
edition = "2021"
description = "System-wide AI grammar and style checker for Windows, powered by Claude."
default-run = "alfred-writer"

[lib]
name = "alfred_writer"
path = "src/lib.rs"

[[bin]]
name = "alfred-writer"
path = "src/main.rs"

[profile.release]
opt-level = 2
strip = true

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.28"
tray-icon = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
arboard = "3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_System_Threading",
]
